update keynote and update tommy info

--- a/about-us.html
+++ b/about-us.html
@@ -1199,11 +1199,11 @@
               <div class="org-uni">National Central University, Taiwan</div>
             </div>
             <div>
-              <div class="org-title">Secretary</div>
+              <div class="org-title">Secretary (Executive)</div>
               <div style="visibility: hidden; background-color: blue;">empty</div>
               <img src="image/org/Li-Jen.jpeg" alt="" class="alignleft frame" width="120" height="120" />
               <div class="org-name">Li-Jen (Tommy) Wang</div>
-              <div class="org-uni">National Yang Ming Chiao Tung University, Taiwan</div>
+              <div class="org-uni">National Central University, Taiwan</div>
             </div>
           </div>
           <div class="org-title mt-10">Program Tracks</div>
@@ -1313,7 +1313,7 @@
               <div class="org-title">LOC Co-chair</div>
               <img src="image/org/Li-Jen.jpeg" alt="" class="alignleft frame" width="120" height="120" />
               <div class="org-name">Li-Jen (Tommy) Wang</div>
-              <div class="org-uni">National Yang Ming Chiao Tung University, Taiwan</div>
+              <div class="org-uni">National Central University, Taiwan</div>
             </div>
             <div>
               <div class="org-title">LOC Co-chair</div>
