--- a/keynote.html
+++ b/keynote.html
@@ -78,8 +78,8 @@
 						</li>
 						<li><a href="call-for-paper.html">CALL FOR Papers</a>
 							<ul>
-							  <li><a href="mainConference.html">Main conference</a> </li>
-							  <li><a href="teacherForum.html">Teacher Forum</a> </li>
+								<li><a href="mainConference.html">Main conference</a> </li>
+								<li><a href="teacherForum.html">Teacher Forum</a> </li>
 							</ul>
 						</li>
 						<li><a href="agenda.html">Programme</a>
@@ -127,8 +127,8 @@
 			<div id="content" class="withsidebar">
 				<div id="main">
 					<div id="maincontent">
-						<h4>Coming soon</h4>
-						<!-- <strong>
+						<!-- <h4>Coming soon</h4> -->
+						<strong>
 							<h5 class="morespace"><a id="k1"></a>
 						</strong></h5>
 						<strong>
@@ -145,23 +145,38 @@
 
 						</div>
 						<div class="one_half lastcols">
-							<a href="#2"><img src="image/org/Dede.jpg" alt="" class="alignleft frame" width="120"
+							<a href="#2"><img src="image/org/Lewis.jpeg" alt="" class="alignleft frame" width="120"
 									height="120" />
-								<div class="org-name">Professor Christopher Dede</div>
-								<div class="org-uni">Senior Research Fellow, <br>Graduate School of Education,<br>
-									Harvard University</div>
+								<div class="org-name">W. Lewis Johnson, Ph.D.</div>
+								<div class="org-uni">President and CEO,<br>
+									Alelo Inc</div>
+							</a>
+						</div>
+						<div class="separator small"></div>
+						<div class="separator small"></div>
+						<div class="one_half firstcols">
+							<a href="#3"><img src="image/org/maria roussou.png" alt="" class="alignleft frame"
+									width="120" height="120" />
+								<div class="org-name">Maria Roussou, Associate Professor</div>
+
+								<div class="org-uni">Associate Professor,<br>National and Kapodistrian University of
+									Athens</div>
 							</a>
 
+						</div>
+						<div class="one_half lastcols">
+							<a href="#4"><img src="image/org/yu-ju-lan.png" alt="" class="alignleft frame" width="120"
+									height="120" />
+								<div class="org-name">Professor Yu-Ju Lan </div>
+								<div class="org-uni">Chair Professor,<br> Taiwan Normal University</div>
+							</a>
 						</div>
 						<div class="separator small"></div>
 						<a id="1" name="1"></a>
 						<div class="separator line"></div>
 
 						<h3><strong>
-								<div style="color:purple">Speech Title: Invitation to Establish Seamless Interest-Driven
-									Creator Theory <br>
-									&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-									—— questions and its implications to MetaACES research
+								<div style="color:purple">Speech Title: Envisioning AI Learning Companions
 							</strong></h3>
 						<div class="separator small"></div>
 
@@ -213,7 +228,7 @@
 							awards: the National Chair Professorship Award in 2020, the Executive Yuan Award for
 							Excellent Science and Technology Contribution in 2019, the Fellow of APSCE in 2019, the Pan
 							Wen Yuan Foundation Excellent Researcher Award in 2009, among others.
-							<div class="separator"></div> -->
+							<div class="separator"></div>
 
 							<!-- <h5><strong>Abstract</strong></h5>
 							<h6 class="morespace" style="text-align: justify;">Human lifespan is extended, but COVID-19
@@ -273,62 +288,76 @@
 								daily life?<br><br>
 								Besides, this talk will also discuss some implications of SIDC Theory to MetaACES
 								research.
-							</h6>
-							<div class="separator"></div> -->
+							</h6> -->
+							<div class="separator"></div>
 
 
-							<!-- <a id="2" name="2"></a>
+							<a id="2" name="2"></a>
 							<div class="separator line"></div>
 
 							<h3><strong>
-									<div style="color:purple">Speech Title: If the Metaverse is the Answer, What is the
-										Question?
+									<div style="color:purple">Speech Title: Pedagogical Agents in the Age of Generative
+										AI
 								</strong></h3>
 							<div class="separator small"></div>
-
-							<h5 class="one_third"><strong>Professor Christopher Dede</strong></h5>
-							<p class="two_third lastcols">Senior Research Fellow, <br>Graduate School of Education,<br>
-								Harvard University</p>
+							<h5 class="one_third"><strong>W. Lewis Johnson</strong></h5>
+							<p class="two_third lastcols">President and CEO, <br> Alelo Inc</p>
 							<h6 class="morespace" style="text-align: justify;"><strong><span class="tab-content"><img
-											src="image/org/Dede.jpg" alt="" class="alignleft frame"
+											src="image/org/lewisJohnson.jpeg" alt="" class="alignleft frame"
 											width="188" /></span><br>&nbsp;<br>
 									<h5>Speaker Bio
 								</strong></h5>
-								Chris Dede is a Senior Research Fellow at the Harvard Graduate School of Education and
-								was for 22 years its Timothy E. Wirth Professor in Learning Technologies. His fields of
-								scholarship include emerging technologies, policy, and leadership. He is a Co-Principal
-								Investigator of the NSF-funded National Artificial Intelligence Institute in Adult
-								Learning and Online Education.
+								Dr. W. Lewis Johnson co-founded Alelo in 2005 as a spinout of the University of Southern
+								California, under his leadership Alelo has developed into a major producer of innovative
+								learning products focusing on communication skills. Alelo has developed courses for use
+								in a number of countries around the world, all using the Virtual Role-Play method.
 								<div class="separator small"></div>
-								<h5><strong>Abstract</strong></h5>
-								<h6 class="morespace" style="text-align: justify;">We live at a time of rapid advances
-									in both the capabilities and the cost of virtual reality (VR), multi-user virtual
-									environments (MUVEs), and various forms of mixed reality (e.g., augmented reality
-									(AR), digital puppeteering). These emerging media potentially offer extraordinary
-									opportunities for enhancing both motivation and learning across a range of subject
-									areas, student developmental levels, and educational settings. <br><br>
-									Immersive media have affordances that enhance experiential learning based on a
-									plan/act/reflect cycle. Psychological immersion is the mental state of being
-									completely absorbed or engaged with something. For example, a well-designed game in
-									a MUVE draws viewers into the metaverse portrayed on the screen, and they feel
-									caught up in that virtual environment. The use of narrative and symbolism creates
-									credible, engaging situations; each participant can influence what happens through
-									their actions and can interact with others. Via richer stimuli, head-mounted or
-									room-sized displays can create sensory immersion to deepen the effect of
-									psychological immersion, as well as induce embodied virtual presence (place
-									illusion), the feeling that you are at a location in the virtual world.<br><br>
-									This talk will describe how the metaverse is powerful for “situated” learning:
-									Experiences take place in the same or a similar virtual context to the real world
-									setting in which skills and knowledge are later applied, and the virtual context
-									itself fosters tacit learning through experience and modeling. However, learning in
-									the metaverse faces challenges of simulator sickness, access by learners with
-									limited vision, and limited bandwidth for non-verbal human interaction.
-								</h6>-->
-								<div class="separator"></div> 
 
-								<div class="clear"></div>
+								<div class="separator"></div>
+								<a id="3" name="3"></a>
+								<div class="separator line"></div>
 
-								<!-- clear float -->
+								<h3><strong>
+										<div style="color:purple">Speech Title:
+									</strong></h3>
+								<div class="separator small"></div>
+								<h5 class="one_third"><strong>Maria Roussou</strong></h5>
+								<p class="two_third lastcols">Associate Professor, <br>National and Kapodistrian
+									University of Athens</p>
+								<h6 class="morespace" style="text-align: justify;"><strong><span
+											class="tab-content"><img src="image/org/mariaRoussou.jpeg" alt=""
+												class="alignleft frame" width="188" /></span><br>&nbsp;<br>
+										<h5>Speaker Bio
+									</strong></h5>
+									Dr. Maria Roussou is an Associate Professor in Interactive Systems at the Department
+									of Informatics & Telecommunications, National and Kapodistrian University of Athens.
+									Her research interests span across various areas including Human-Computer
+									Interaction, eXtended Reality, Games, and Data Visualization.
+									<div class="separator small"></div>
+
+									<div class="separator"></div>
+									<a id="4" name="4"></a>
+									<div class="separator line"></div>
+
+									<h3><strong>
+											<div style="color:purple">Speech Title: New Realities in Language Education: Enhancing language Learning through the metaverse and AI
+										</strong></h3>
+									<div class="separator small"></div>
+									<h5 class="one_third"><strong>Yu-Ju Lan </strong></h5>
+									<p class="two_third lastcols">Chair Professor, <br>Taiwan Normal University</p>
+									<h6 class="morespace" style="text-align: justify;"><strong><span
+												class="tab-content"><img src="image/org/yuJuLan.png" alt=""
+													class="alignleft frame" width="188" /></span><br>&nbsp;<br>
+											<h5>Speaker Bio
+										</strong></h5>
+										Dr. Yu-Ju Lan is a Research Chair Professor in the Department of Chinese as a Second Language at National Taiwan Normal University. She is currently the Editor-in-Chief of Educational Technology & Society, Associate Editor of Language Learning & Technology, and on the editorial board of ​Ampersand. She was the founding president of the Taiwan Pedagogy and Practice in TELL Association.
+										<div class="separator small"></div>
+
+										<div class="separator"></div>
+
+										<div class="clear"></div>
+
+										<!-- clear float -->
 					</div>
 					<!-- end #maincontent -->
 					<div id="sidebar">
