update prof. chan keynote

--- a/keynote.html
+++ b/keynote.html
@@ -167,7 +167,7 @@
 						<div class="one_half lastcols">
 							<a href="#4"><img src="image/org/yu-ju-lan.png" alt="" class="alignleft frame" width="120"
 									height="120" />
-								<div class="org-name">Professor Yu-Ju Lan </div>
+								<div class="org-name">Professor 	Yu-Ju Lan </div>
 								<div class="org-uni">Chair Professor,<br> Taiwan Normal University</div>
 							</a>
 						</div>
@@ -184,50 +184,10 @@
 						<p class="two_third lastcols">Chair Professor,<br> National Central University</p>
 						<h6 class="morespace" style="text-align: justify;"><strong><span class="tab-content"><img
 										src="image/org/Prof_Tak-Wai_Chan.png" alt="" class="alignleft frame"
-										width="188" /></span><br>&nbsp;<br>
+										width="178" /></span><br>&nbsp;<br>
 								<h5>Speaker Bio
 							</strong></h5>
-							Professor Tak-Wai Chan is a trailblazer in digital learning and a global leader in the
-							field. Almost 40 years ago, at a time when computers and the internet were not yet
-							mainstream in the mid-eighties, he began researching on AI supported learning for his
-							doctoral dissertation, proposing a new genus of AI in education system called learning
-							companion system in 1988. This virtual companion system, called Integration-Kid, was the
-							first artificial companion in the world. In 1989, he and his students started to build the
-							world's first dedicated networked learning system for collaborative learning and learning
-							through competition games, called Distributed West (1992). In early 2000s, he and his
-							colleagues built the largest online learning community called EduCity (1.5 million learners
-							with 1,700 schools involved in 2003), which was also referred as the first learning society
-							in the world. In the same time period, his team conducted frontier research on mobile
-							learning, intelligent classroom, future classroom, interactive clicker, e-schoolbag,
-							one-to-one technology enhanced learning, and so forth. After this series of research, in
-							2006, working together with a large group of international researchers mainly from the
-							Western countries, he proposed the concept of Seamless Learning. In 2010s, after some
-							long-term experiments on reading (MSSR) and writing in one-to-one technology enhanced
-							classroom, in collaboration with a group of Asian scholars, he proposed the Interest-Driven
-							Creator (IDC) Theory. Again, he is now calling for an international researcher team to build
-							the Seamless Interest-Driven Creator (SIDC) Theory.<br><br>
-							In addition to his research, Professor Chan has also been a major founder of two societies:
-							the Asia-Pacific Society for Computers in Education (APSCE) and the Global Chinese Society
-							for Computers in Education (GCSCE). These two societies respectively host annual conference
-							series ICCEs and GCCCEs, as well as the journals RPTEL and JLCE. Moreover, to cope with the
-							expanding research community of the field, he has been assisting the establishment of APSCE
-							Theme-Based International Conference Series (TBICS), including CTE-STEM, ICFULL,
-							MetaACES.<br><br>
-							Throughout his career, Professor Chan has received numerous recognitions and academic
-							awards, including the National Chair Professorship Award in 2020, the Executive Yuan Award
-							for Outstanding Science and Technology Contribution in 2019, the Fellow of APSCE in 2019,
-							the Academic Award of the Ministry of Education in 2013, the Pan Wen Yuan Foundation
-							Outstanding Research Award in 2009, and the Chinese Foundation Award from the National
-							Science Council in 2003. Besides being National Chair Professor, he has also held several
-							distinguished positions, including Chair Professor at NCU since 2008, Distinguished
-							Professor at NCU from 2004 to 2008, Excellent Appointed Researcher at the National Science
-							Council in 2008, and Appointed Researcher at the National Science Council from 2000 to 2007.
-							Additionally, he has received Excellent Research Awards from the National Science Council
-							for the years 1995-1996, 1997-1998, and 1999-2000.<br><br>
-							Throughout his career, Professor Chan has received numerous recognitions and academic
-							awards: the National Chair Professorship Award in 2020, the Executive Yuan Award for
-							Excellent Science and Technology Contribution in 2019, the Fellow of APSCE in 2019, the Pan
-							Wen Yuan Foundation Excellent Researcher Award in 2009, among others.
+							Chan is Chair Professor of the Graduate Institute of Network Learning Technology at National Central University in Taiwan. He has worked on various areas of digital technology supported learning, including artificial intelligence in education, computer supported collaborative learning, digital classrooms, online learning communities, mobile and ubiquitous learning, digital game based learning, and, most recently, technology supported mathematics and language arts learning.
 							<div class="separator"></div>
 
 							<!-- <h5><strong>Abstract</strong></h5>
