--- a/keynote.html
+++ b/keynote.html
@@ -139,17 +139,17 @@
 						<div class="one_half firstcols">
 							<a href="#1"><img src="image/org/Prof_Tak-Wai_Chan.png" alt="" class="alignleft frame"
 									width="120" height="120" />
-								<div class="org-name">Professor Tak-Wai Chan</div>
-								<div class="org-uni">Chair Professor,<br> National Central University</div>
+								<div class="org-name">Prof. Tak-Wai Chan</div>
+								<div class="org-uni">National Chair Professor,<br> National Central University</div>
 							</a>
 
 						</div>
 						<div class="one_half lastcols">
 							<a href="#2"><img src="image/org/Lewis.jpeg" alt="" class="alignleft frame" width="120"
 									height="120" />
-								<div class="org-name">W. Lewis Johnson, Ph.D.</div>
-								<div class="org-uni">President and CEO,<br>
-									Alelo Inc</div>
+								<div class="org-name">Prof. W. Lewis Johnson</div>
+								<div class="org-uni">Professor, <br>
+									University of Southern California</div>
 							</a>
 						</div>
 						<div class="separator small"></div>
@@ -157,9 +157,9 @@
 						<div class="one_half firstcols">
 							<a href="#3"><img src="image/org/maria roussou.png" alt="" class="alignleft frame"
 									width="120" height="120" />
-								<div class="org-name">Maria Roussou, Associate Professor</div>
+								<div class="org-name">Prof. Maria Roussou</div>
 
-								<div class="org-uni">Associate Professor,<br>National and Kapodistrian University of
+								<div class="org-uni">Professor,<br>National and Kapodistrian University of
 									Athens</div>
 							</a>
 
@@ -167,8 +167,8 @@
 						<div class="one_half lastcols">
 							<a href="#4"><img src="image/org/yu-ju-lan.png" alt="" class="alignleft frame" width="120"
 									height="120" />
-								<div class="org-name">Professor 	Yu-Ju Lan </div>
-								<div class="org-uni">Chair Professor,<br> Taiwan Normal University</div>
+								<div class="org-name">Prof. Yu-Ju Lan </div>
+								<div class="org-uni">Chair Professor,<br>National Taiwan Normal University</div>
 							</a>
 						</div>
 						<div class="separator small"></div>
@@ -176,18 +176,18 @@
 						<div class="separator line"></div>
 
 						<h3><strong>
-								<div style="color:purple">Speech Title: Envisioning AI Learning Companions
+								<div style="color:purple">Envisioning AI Learning Companions
 							</strong></h3>
 						<div class="separator small"></div>
 
-						<h5 class="one_third"><strong>Professor Tak-Wai Chan</strong></h5>
-						<p class="two_third lastcols">Chair Professor,<br> National Central University</p>
+						<h5 class="one_third"><strong>Prof. Tak-Wai Chan</strong></h5>
+						 <p class="two_third lastcols"><!--Chair Professor--><br><!-- National Central University--></p> 
 						<h6 class="morespace" style="text-align: justify;"><strong><span class="tab-content"><img
-										src="image/org/Prof_Tak-Wai_Chan.png" alt="" class="alignleft frame"
+										src="image/org/Prof_Tak-Wai_Chan.png	" alt="" class="alignleft frame"
 										width="178" /></span><br>&nbsp;<br>
 								<h5>Speaker Bio
 							</strong></h5>
-							Chan is Chair Professor of the Graduate Institute of Network Learning Technology at National Central University in Taiwan. He has worked on various areas of digital technology supported learning, including artificial intelligence in education, computer supported collaborative learning, digital classrooms, online learning communities, mobile and ubiquitous learning, digital game based learning, and, most recently, technology supported mathematics and language arts learning.
+							Tak-Wai Chan is Chair Professor of the Graduate Institute of Network Learning Technology at National Central University in Taiwan. He has worked on various areas of digital technology supported learning, including artificial intelligence in education, computer supported collaborative learning, digital classrooms, online learning communities, mobile and ubiquitous learning, digital game based learning, and, most recently, technology supported mathematics and language arts learning.
 							<div class="separator"></div>
 
 							<!-- <h5><strong>Abstract</strong></h5>
@@ -256,12 +256,12 @@
 							<div class="separator line"></div>
 
 							<h3><strong>
-									<div style="color:purple">Speech Title: Pedagogical Agents in the Age of Generative
+									<div style="color:purple">Pedagogical Agents in the Age of Generative
 										AI
 								</strong></h3>
 							<div class="separator small"></div>
 							<h5 class="one_third"><strong>W. Lewis Johnson</strong></h5>
-							<p class="two_third lastcols">President and CEO, <br> Alelo Inc</p>
+							<p class="two_third lastcols"><!-- President and CEO, --><br><!--Alelo Inc--></p>
 							<h6 class="morespace" style="text-align: justify;"><strong><span class="tab-content"><img
 											src="image/org/lewisJohnson.jpeg" alt="" class="alignleft frame"
 											width="188" /></span><br>&nbsp;<br>
@@ -278,12 +278,12 @@
 								<div class="separator line"></div>
 
 								<h3><strong>
-										<div style="color:purple">Speech Title:
+										<div style="color:purple"><!-- Speech Title: -->
 									</strong></h3>
 								<div class="separator small"></div>
 								<h5 class="one_third"><strong>Maria Roussou</strong></h5>
-								<p class="two_third lastcols">Associate Professor, <br>National and Kapodistrian
-									University of Athens</p>
+								<p class="two_third lastcols"><!--Associate Professor, --><br><!--National and Kapodistrian
+									University of Athens--></p>
 								<h6 class="morespace" style="text-align: justify;"><strong><span
 											class="tab-content"><img src="image/org/mariaRoussou.jpeg" alt=""
 												class="alignleft frame" width="188" /></span><br>&nbsp;<br>
@@ -300,11 +300,11 @@
 									<div class="separator line"></div>
 
 									<h3><strong>
-											<div style="color:purple">Speech Title: New Realities in Language Education: Enhancing language Learning through the metaverse and AI
+											<div style="color:purple">New Realities in Language Education: Enhancing language Learning through the metaverse and AI
 										</strong></h3>
 									<div class="separator small"></div>
 									<h5 class="one_third"><strong>Yu-Ju Lan </strong></h5>
-									<p class="two_third lastcols">Chair Professor, <br>Taiwan Normal University</p>
+									<p class="two_third lastcols"><!--Chair Professor,--> <br><!--Taiwan Normal University--></p>
 									<h6 class="morespace" style="text-align: justify;"><strong><span
 												class="tab-content"><img src="image/org/yuJuLan.png" alt=""
 													class="alignleft frame" width="188" /></span><br>&nbsp;<br>
