--- a/keynote.html
+++ b/keynote.html
@@ -140,7 +140,7 @@
 							<a href="#1"><img src="image/org/Prof_Tak-Wai_Chan.png" alt="" class="alignleft frame"
 									width="120" height="120" />
 								<div class="org-name">Prof. Tak-Wai Chan</div>
-								<div class="org-uni">National Chair Professor,<br> National Central University</div>
+								<div class="org-uni">National Chair Professor,<br> National Central University, Taiwan</div>
 							</a>
 
 						</div>
@@ -181,7 +181,7 @@
 						<div class="separator small"></div>
 
 						<h5 class="one_third"><strong>Prof. Tak-Wai Chan</strong></h5>
-						 <p class="two_third lastcols"><!--Chair Professor--><br><!-- National Central University--></p> 
+						 <p class="two_third lastcols">National Chair Professor<br>National Central University, Taiwan</p> 
 						<h6 class="morespace" style="text-align: justify;"><strong><span class="tab-content"><img
 										src="image/org/Prof_Tak-Wai_Chan.png	" alt="" class="alignleft frame"
 										width="178" /></span><br>&nbsp;<br>
@@ -261,7 +261,7 @@
 								</strong></h3>
 							<div class="separator small"></div>
 							<h5 class="one_third"><strong>W. Lewis Johnson</strong></h5>
-							<p class="two_third lastcols"><!-- President and CEO, --><br><!--Alelo Inc--></p>
+							<p class="two_third lastcols">Professor<br>University of Southern California</p>
 							<h6 class="morespace" style="text-align: justify;"><strong><span class="tab-content"><img
 											src="image/org/lewisJohnson.jpeg" alt="" class="alignleft frame"
 											width="188" /></span><br>&nbsp;<br>
@@ -278,18 +278,18 @@
 								<div class="separator line"></div>
 
 								<h3><strong>
-										<div style="color:purple"><!-- Speech Title: -->
+										<div style="color:purple">Speech Title: 	TBD
 									</strong></h3>
 								<div class="separator small"></div>
 								<h5 class="one_third"><strong>Maria Roussou</strong></h5>
-								<p class="two_third lastcols"><!--Associate Professor, --><br><!--National and Kapodistrian
-									University of Athens--></p>
+								<p class="two_third lastcols">Professor<br>National and Kapodistrian
+									University of Athens</p>
 								<h6 class="morespace" style="text-align: justify;"><strong><span
 											class="tab-content"><img src="image/org/mariaRoussou.jpeg" alt=""
 												class="alignleft frame" width="188" /></span><br>&nbsp;<br>
 										<h5>Speaker Bio
 									</strong></h5>
-									Dr. Maria Roussou is an Associate Professor in Interactive Systems at the Department
+									Dr. Maria Roussou is an Professor in Interactive Systems at the Department
 									of Informatics & Telecommunications, National and Kapodistrian University of Athens.
 									Her research interests span across various areas including Human-Computer
 									Interaction, eXtended Reality, Games, and Data Visualization.
@@ -304,7 +304,7 @@
 										</strong></h3>
 									<div class="separator small"></div>
 									<h5 class="one_third"><strong>Yu-Ju Lan </strong></h5>
-									<p class="two_third lastcols"><!--Chair Professor,--> <br><!--Taiwan Normal University--></p>
+									<p class="two_third lastcols">Chair Professor<br>National Taiwan Normal University</p>
 									<h6 class="morespace" style="text-align: justify;"><strong><span
 												class="tab-content"><img src="image/org/yuJuLan.png" alt=""
 													class="alignleft frame" width="188" /></span><br>&nbsp;<br>
