update yu ru lan keynote

--- a/keynote.html
+++ b/keynote.html
@@ -138,7 +138,8 @@
 							<a href="#1"><img src="image/org/Prof_Tak-Wai_Chan.png" alt="" class="alignleft frame"
 									width="120" height="120" />
 								<div class="org-name">Prof. Tak-Wai Chan</div>
-								<div class="org-uni">National Chair Professor,<br> National Central University, Taiwan</div>
+								<div class="org-uni">National Chair Professor,<br> National Central University, Taiwan
+								</div>
 							</a>
 
 						</div>
@@ -179,13 +180,19 @@
 						<div class="separator small"></div>
 
 						<h5 class="one_third"><strong>Prof. Tak-Wai Chan</strong></h5>
-						 <p class="two_third lastcols">National Chair Professor<br>National Central University, Taiwan</p> 
+						<p class="two_third lastcols">National Chair Professor<br>National Central University, Taiwan
+						</p>
 						<h6 class="morespace" style="text-align: justify;"><strong><span class="tab-content"><img
 										src="image/org/Prof_Tak-Wai_Chan.png	" alt="" class="alignleft frame"
 										width="178" /></span><br>&nbsp;<br>
 								<h5>Speaker Bio
 							</strong></h5>
-							Tak-Wai Chan is Chair Professor of the Graduate Institute of Network Learning Technology at National Central University in Taiwan. He has worked on various areas of digital technology supported learning, including artificial intelligence in education, computer supported collaborative learning, digital classrooms, online learning communities, mobile and ubiquitous learning, digital game based learning, and, most recently, technology supported mathematics and language arts learning.
+							Tak-Wai Chan is Chair Professor of the Graduate Institute of Network Learning Technology at
+							National Central University in Taiwan. He has worked on various areas of digital technology
+							supported learning, including artificial intelligence in education, computer supported
+							collaborative learning, digital classrooms, online learning communities, mobile and
+							ubiquitous learning, digital game based learning, and, most recently, technology supported
+							mathematics and language arts learning.
 							<div class="separator"></div>
 
 							<!-- <h5><strong>Abstract</strong></h5>
@@ -276,7 +283,7 @@
 								<div class="separator line"></div>
 
 								<h3><strong>
-										<div style="color:purple">Speech Title: 	TBD
+										<div style="color:purple">Speech Title: TBD
 									</strong></h3>
 								<div class="separator small"></div>
 								<h5 class="one_third"><strong>Maria Roussou</strong></h5>
@@ -298,19 +305,25 @@
 									<div class="separator line"></div>
 
 									<h3><strong>
-											<div style="color:purple">New Realities in Language Education: Enhancing language Learning through the metaverse and AI
+											<div style="color:purple">New Realities in Language Education: Enhancing
+												language Learning through the metaverse and AI
 										</strong></h3>
 									<div class="separator small"></div>
 									<h5 class="one_third"><strong>Yu-Ju Lan </strong></h5>
-									<p class="two_third lastcols">Chair Professor<br>National Taiwan Normal University</p>
+									<p class="two_third lastcols">Research Chair Professor<br>National Taiwan Normal University
+									</p>
 									<h6 class="morespace" style="text-align: justify;"><strong><span
-												class="tab-content"><img src="image/org/yuJuLan.png" alt=""
+												class="tab-content"><img src="image/org/YU-JU LAN.png" alt=""
 													class="alignleft frame" width="188" /></span><br>&nbsp;<br>
 											<h5>Speaker Bio
 										</strong></h5>
-										Dr. Yu-Ju Lan is a Research Chair Professor in the Department of Chinese as a Second Language at National Taiwan Normal University. She is currently the Editor-in-Chief of Educational Technology & Society, Associate Editor of Language Learning & Technology, and on the editorial board of ​Ampersand. She was the founding president of the Taiwan Pedagogy and Practice in TELL Association.
-										<div class="separator small"></div>
-
+										Dr. Yu-Ju Lan is a Research Chair Professor in the Department of Chinese as a Second Language at National Taiwan Normal University. She is currently the Editor-in-Chief of Educational Technology & Society, Associate Editor of Language Learning & Technology, and on the editorial board of Ampersand. She was awarded the Outstanding Research Award by the Ministry of Science and Technology (MOST), Taiwan, in 2022. Dr. Lan is the founding president of the Taiwan Pedagogy and Practice in TELL Association. Her research interests include technology-enhanced foreign language learning, virtual reality, AI, and online synchronous teacher training. 
+										Association.
+										<div class="separator"></div>
+										<h5><strong>Abstract</strong></h5>
+										<h6 class="morespace" style="text-align: justify;">
+											Artificial intelligence (AI) has long been playing an essential role in language education. However, the recent emergence of generative AI models like ChatGPT and Midjourney has reignited interest in the potential of AI applications in education, prompting both excitement and caution. Generative AI holds considerable promise for revolutionizing education across various fronts. With the advent of the Metaverse era, hailed as a transformative phase in internet evolution, there's an urgent need for educators and researchers to reassess the relationship between humans and AI as we reshape our teaching, learning, and everyday experiences. As educators, it's imperative that we engage in open conversations about integrating the Metaverse and AI into language learning, topics that are currently at the forefront of academic discourse. In light of this, the speech will cover several key areas, including an introduction to the Metaverse and generative AI, their practical application in language learning, the opportunities they present, the challenges they pose, and recommendations for future research.
+										</h6>
 										<div class="separator"></div>
 
 										<div class="clear"></div>
