update yu ru lan photo

--- a/keynote.html
+++ b/keynote.html
@@ -164,7 +164,7 @@
 
 						</div>
 						<div class="one_half lastcols">
-							<a href="#4"><img src="image/org/yu-ju-lan.png" alt="" class="alignleft frame" width="120"
+							<a href="#4"><img src="image/org/YU-JU LAN.png" alt="" class="alignleft frame" width="120"
 									height="120" />
 								<div class="org-name">Prof. Yu-Ju Lan </div>
 								<div class="org-uni">Chair Professor,<br>National Taiwan Normal University</div>
